# Synthphonia

./: .gitignore  Cargo.toml  README.md  a  a.smt2  cargo-docgen.toml  rust-toolchain.toml
.github/workflows/: docs.yml
docs/: artifact.md
src/: galloc.rs  log.rs  main.rs  solutions.rs  value.rs
src/backward/: int.rs  liststr.rs  mod.rs  simple.rs  str.rs
src/expr/: cfg.rs  context.rs  mod.rs
src/expr/ops/: base.rs  date.rs  float.rs  int.rs  list.rs  macros.rs  mod.rs  op_impl.rs  str.rs
src/expr/ops/bv/: mod.rs
src/expr/ops/list/: filter.rs  map.rs
src/expr/ops/str/: replace.rs
src/forward/: bridge.rs  executor.rs  mod.rs
src/forward/data/: all_eq.rs  cond_search.rs  contains.rs  len.rs  listsubseq.rs  mod.rs  prefix.rs  size.rs  substr.rs
src/forward/enumeration/: mod.rs
src/forward/future/: channel.rs  eventbus.rs  futcell.rs  mod.rs  task.rs  taskrc.rs
src/parser/: check.rs  config.rs  ioexamples.rs  mod.rs  problem.pest  problem.rs  prod.rs
src/text/: mod.rs
src/text/formatting/: float.rs  int.rs  mod.rs  month.rs  time.rs  weekday.rs
src/text/parsing/: date.rs  float.rs  int.rs  mod.rs  month.rs  time.rs  weekday.rs
src/to/: mod.rs
src/tree_learning/: bits.rs  mod.rs
src/utils/: fut.rs  join.rs  mod.rs  nested.rs
test/: a.smt2  test-nowait.sl  test.sl  test2-nowait.sl  test2.sl  test2duet.sl  test2map.sl  test2map10000.sl  test2map2.sl  test2map2000.sl  test2map4000.sl  test3.sl
