[package]
name = "stren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcmp = "0.4.1"
bumpalo = { version = "3.13.0", features = ["collections"] }
chrono = "0.4.31"
clap = { version = "4.3.21", features = ["derive"] }
date_time_parser = "0.2.0"
dateparser = "0.2.1"
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
ext-trait = "1.0.1"
figment = { version = "0.10.10", features = ["toml"] }
futures = "0.3.28"
futures-core = "0.3.28"
iset = "0.2.2"
itertools = "0.11.0"
joinery = "3.1.0"
kv-trie-rs = "0.1.2"
noop-waker = "0.1.0"
pest = "2.7.3"
pest_derive = "2.7.3"
pin-cell = "0.2.0"
pin-weak = "1.1.0"
refbox = "0.3.0"
regex = "1.10.2"
serde = { version = "1.0.183", features = ["derive"] }
smallvec = "1.11.1"
topological-sort = "0.2.2"
you-can = "0.0.14"
